crates/resource/tests/probes/derive_tuple_struct.stderr
error: #[derive(Resource)] does not support `#[credential]` on tuple-struct fields — use a named-field struct
  --> tests/probes/derive_tuple_struct.rs:14:22
   |
14 | struct TupleResource(#[credential(key = "auth")] SlotCell<CredentialGuard<FakeCred>>);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
